tests/neg/i22890/caps_1.java
package scala;

class caps { // error: caps is already defined as package caps
  static public void foo() {}
}